SwipeDelegate: document which items can be used in left/right/behind

Task-number: QTBUG-54658
Change-Id: Ie8bb1fa6669c7dd1cd18199d01c773a1854edad4
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>